security/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: techmart-network-policy
  namespace: techmart
spec:
  podSelector:
    matchLabels:
      app: techmart-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: techmart
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 5432
        - port: 53
          protocol: UDP
